fix: overflow slideshow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -83,6 +83,7 @@ mat-sidenav{
 #leftSide{
     height: -webkit-fill-available;
     cursor: pointer;
+    overflow: hidden;
 }
 
 #rightSide{
